<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.worldonetop.portfolio.view.detail.DetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.AddActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/detailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/tab_portfolio"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp">

                    <TextView
                        android:id="@+id/appbarMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="18dp"
                        android:text="@string/save"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">



                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:transitionName="fileName"
                            android:text="@={vm.portfolioData.title}"
                            android:hint="@string/add_file"
                            android:focusableInTouchMode="false"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none"
                            android:padding="12dp"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/content"
                            android:transitionName="fileContent"
                            android:text="@={vm.portfolioData.content}"
                            android:hint="@string/add_content"
                            android:enabled="@{vm.editMode}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:padding="12dp"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/listLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/activitys"
                            android:text="@string/add_activity"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="50dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/quetions"
                            android:text="@string/add_qna"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.worldonetop.portfolio.view.detail.DetailBottomFragment"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_insetEdge="bottom"
            tools:layout="@layout/fragment_detail_bottom" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>