<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.worldonetop.portfolio.view.detail.DetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.AddActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/detailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/tab_activity"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp">

                    <TextView
                        android:id="@+id/appbarMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="18dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <Spinner
                        android:id="@+id/category"
                        android:selectedItemPosition="@={vm.activityData.type + 1}"
                        android:enabled="@{vm.editMode}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="center" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:text="@={vm.activityData.title}"
                            android:enabled="@{vm.editMode}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/add_activity_title"
                            android:inputType="textMultiLine"
                            android:padding="12dp"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/dateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/startDate"
                                android:text="@{vm.startDate}"
                                android:enabled="@{vm.editMode}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                                android:drawableTint="@color/primaryColor"
                                android:focusableInTouchMode="false"
                                android:hint="@string/start_date"
                                android:inputType="date"
                                android:padding="12dp"
                                android:textSize="16sp"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="50dp"
                            android:layout_height="0dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/endDate"
                                android:text="@{vm.endDate}"
                                android:enabled="@{vm.editMode}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                                android:drawableTint="@color/primaryColor"
                                android:focusableInTouchMode="false"
                                android:hint="@string/end_date"
                                android:inputType="date"
                                android:padding="12dp"
                                android:textSize="16sp"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/content"
                            android:text="@={vm.activityData.content}"
                            android:hint="@string/add_content"
                            android:enabled="@{vm.editMode}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:padding="12dp"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/listLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/links"
                            android:text="@string/add_links"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="50dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/files"
                            android:text="@string/add_files"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.worldonetop.portfolio.view.detail.DetailBottomFragment"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_insetEdge="bottom"
            tools:layout="@layout/fragment_detail_bottom" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>