<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="vm"
            type="com.worldonetop.portfolio.view.detail.DetailViewModel"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.AddActivity"
        android:orientation="vertical">


            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/detailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/tab_qna"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp">

                    <TextView
                        android:id="@+id/appbarMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="18dp"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:text="@={vm.questionData.question}"
                            android:enabled="@{vm.editMode}"
                            android:hint="@string/add_question"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:padding="12dp"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/content"
                            android:text="@={vm.questionData.answer}"
                            android:hint="@string/add_answer"
                            android:enabled="@{vm.editMode}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:padding="12dp"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
</layout>