<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.AddActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/addToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentInsetLeft="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetStartWithNavigation="0dp">

                    <TextView
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="18dp"
                        android:text="@string/save"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <Spinner
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:gravity="center" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:padding="12dp"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/dateLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/startDate"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                                android:drawableTint="@color/primaryColor"
                                android:focusableInTouchMode="false"
                                android:hint="@string/start_date"
                                android:inputType="date"
                                android:padding="12dp"
                                android:textSize="16sp"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <View
                            android:layout_width="50dp"
                            android:layout_height="0dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/endDate"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawableEnd="@drawable/ic_baseline_calendar_month_24"
                                android:drawableTint="@color/primaryColor"
                                android:focusableInTouchMode="false"
                                android:hint="@string/end_date"
                                android:inputType="date"
                                android:padding="12dp"
                                android:textSize="16sp"
                                tools:ignore="LabelFor" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/content"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textMultiLine"
                            android:minLines="3"
                            android:padding="12dp"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp"
                            tools:ignore="LabelFor" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/listLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/firstListTitle"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            tools:text="@string/add_links" />

                        <View
                            android:layout_width="50dp"
                            android:layout_height="0dp" />

                        <Button
                            android:id="@+id/secondListTitle"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            tools:text="@string/add_qna" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
            <include
                android:id="@+id/bottomSheet"
                layout="@layout/fragment_detail_bottom"/>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>